--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "codeeditor": "file:",
     "lucide-react": "^0.474.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
